--- a/XYZReader/src/main/res/values-sw600dp/dimens.xml
+++ b/XYZReader/src/main/res/values-sw600dp/dimens.xml
@@ -2,6 +2,11 @@
     <!-- detail -->
     <dimen name="detail_title_text_size">42sp</dimen>
     <dimen name="detail_body_text_size">20sp</dimen>
+    <dimen name="detail_body_text_size_subtitle">16sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.3</item>
-    <dimen name="fab_margin">24dp</dimen>
+    <dimen name="frame_layout_height_phone">80dp</dimen>
+    <dimen name="recycler_view_padding_top">84dp</dimen>
+    <dimen name="floating_action_button_size">64dp</dimen>
+    <dimen name="fab_margin">32dp</dimen>
+    <dimen name="article_body_side_margins">20dp</dimen>
 </resources>
