--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,10 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#00cded</color>
+    <color name="theme_primary_dark">#07a2ba</color>
+    <color name="theme_lt">#a3f2ff</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="gray">#595959</color>
+    <color name="dkgray">#383838</color>
 </resources>
