--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -1,11 +1,25 @@
 <resources>
     <!-- detail -->
     <dimen name="detail_title_text_size">32sp</dimen>
-    <dimen name="detail_body_text_size">22sp</dimen>
+    <dimen name="detail_body_text_size">16sp</dimen>
+    <dimen name="detail_body_text_size_subtitle">12sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.25</item>
 
-    <dimen name="fab_elevation">2dp</dimen>
-    <dimen name="fab_press_translation_z">6dp</dimen>
+    <dimen name="article_body_side_margins">16dp</dimen>
+
+    <dimen name="card_view_margin">4dp</dimen>
+    <dimen name="fab_elevation">10dp</dimen>
+    <dimen name="fab_press_translation_z">14dp</dimen>
+    <dimen name="article_elevation">4dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
+    <dimen name="action_bar_size_phone">16dp</dimen>
+    <dimen name="list_item_text_view_padding">16dp</dimen>
+    <dimen name="list_item_text_view_padding_bottom">4dp</dimen>
+    <dimen name="recycler_view_padding_top">76dp</dimen>
+    <dimen name="recycler_view_padding_bottom">28dp</dimen>
+    <dimen name="floating_action_button_size">56dp</dimen>
+    <dimen name="frame_layout_height_phone">72dp</dimen>
+    <dimen name="fragment_linear_layout_elevation">4dp</dimen>
+    <dimen name="photo_list_item_max_depth">100dp</dimen>
 
 </resources>
