--- a/XYZReader/src/main/res/values-sw600dp/dimens.xml
+++ b/XYZReader/src/main/res/values-sw600dp/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="floating_action_button_size">64dp</dimen>
     <dimen name="fab_margin">32dp</dimen>
     <dimen name="article_body_side_margins">20dp</dimen>
+    <dimen name="toobar_height">80dp</dimen>
 </resources>
