--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
     <dimen name="article_body_side_margins">16dp</dimen>
 
     <dimen name="card_view_margin">4dp</dimen>
-    <dimen name="fab_elevation">10dp</dimen>
+    <dimen name="fab_elevation">14dp</dimen>
     <dimen name="fab_press_translation_z">14dp</dimen>
     <dimen name="article_elevation">4dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
@@ -21,5 +21,6 @@
     <dimen name="frame_layout_height_phone">72dp</dimen>
     <dimen name="fragment_linear_layout_elevation">4dp</dimen>
     <dimen name="photo_list_item_max_depth">100dp</dimen>
+    <dimen name="toobar_height">64dp</dimen>
 
 </resources>
