--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -93,7 +93,7 @@
     <style name="Theme.AppCompat.Fab">
         <item name="android:stateListAnimator">@anim/fab_state_list_anim</item>
         <item name="android:layout_gravity">bottom|end</item>
-        <item name="android:background">@drawable/add_fab_background</item>
+        <item name="android:backgroundTint">@color/theme_primary</item>
         <item name="android:layout_marginRight">@dimen/fab_margin</item>
         <item name="android:layout_marginBottom">@dimen/fab_margin</item>
         <item name="android:elevation">@dimen/fab_elevation</item>
